Added junit and a couple of simple tests

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -82,6 +82,12 @@
 			<artifactId>tomcat-servlet-api</artifactId>
 			<version>8.0.29</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 		</dependency>
 
 	</dependencies>
