--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,11 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+						http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.alex.app</groupId>
 	<artifactId>git-brancher</artifactId>
-	<version>1</version>
+	<version>1.0.0</version>
 	<packaging>war</packaging>
 
 	<properties>
@@ -90,6 +93,11 @@
 			<version>4.12</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alex.app</groupId>
+			<artifactId>git-brancher-core</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
