--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<spring-framework-version>4.2.2.RELEASE</spring-framework-version>
+		<spring-framework-version>4.3.18</spring-framework-version>
 		<javax.servlet.version>3.1.0</javax.servlet.version>
 	</properties>
 	<dependencies>
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>2.6.3</version>
+			<version>[2.8.11.1,)</version>
 		</dependency>
 
 		<dependency>
